# MCP

./: .gitignore  README.md  pyproject.toml
agents/: browser-use.md  browser-use.py
agents/browser/: browser.py  chat.py  serializer.py
agents/epub2audio/: epub_2_audio.py  utils.py
clients/mcp-client/: client.py
clients/sse_client/: sse.py
config/: config.py  config.yml
servers/mcp-obsidian/: mcp_obsidian_config.json  pyproject.toml
servers/mcp-obsidian/src/mcp_obsidian/: obsidian.py  server.py
servers/sse_mcp/: pyproject.toml  server.py
servers/weather-server-mcp/: mcp_server_config.json  pyproject.toml
tracing/: config.yml  logging.py
