[project]
name = "X-MCP"
version = "0.1.0"
description = "MCP Servers and Clients by Edony"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-mcp-adapters>=0.0.7",
    "langgraph>=0.3.28",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
]
